* iso image writing job cleanup * Do not delete the writing job directly after it emitted the finished signal (some cleanup needs to be done)

This finally fixes
BUG: 191627

svn path=/trunk/extragear/multimedia/k3b/; revision=973242